# sql_interpreter

./: CMakeLists.txt
src/: client.cpp  server.cpp
src/dbms/: CMakeLists.txt  table.cpp  table.hpp
src/dbms/exceptions/: dbms_exceptions.cpp  dbms_exceptions.h
src/exceptions/: CMakeLists.txt  exceptions.cpp  exceptions.hpp
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/rec_desc/: CMakeLists.txt  parser.cpp  parser.hpp  runner.cpp  runner.hpp  scanner.cpp  scanner.hpp  sql.ebnf
src/rec_desc/exceptions/: parse_exceptions.cpp  parse_exceptions.h
src/sockets/: CMakeLists.txt  sockets.cpp  sockets.hpp
src/sockets/exceptions/: sock_exceptions.cpp  sock_exceptions.h
